--- a/flexbox.css
+++ b/flexbox.css
@@ -1,34 +1,116 @@
-html, body {
-  height: 100%; /*setting this is explicitly important*/
-}
+html,
 body {
-  display: flex; /*flex power activated!*/
-  flex-direction: column; /*Stack the flex items (main and footer elements) vertically not horizontally!*/
-  background-color: #fff;
-  margin: 0;
-  font-family: lato; sans-serif;
-  color: #222;
-  font-size: 0.9em;
+	height: 100%;
 }
+
+body {
+	display: flex; /* flex superpowers activaed! */
+	flex-direction: column; /* Stack the flex-items vertically not the default horizontal view */
+	background-color: #fff;
+	margin: 0;
+	font-family: Lato, sans-serif;
+	color: #222;
+	font-size: 0.9em;
+	height: 100%;
+}
+
 main {
-  flex: 1 0 auto; /* fill the available space */
-  /*display: flex; /*I just included this! - now a flex container with flex items: sidebar & main content section*/*/
+	flex: 1 0 auto; /*fill the available space*/
+	display: flex;
 }
+
+aside {
+	flex: 0 0 40px; /*as a flex item: do not grow or shrink. Just stay fixed at 40px*/
+	display: flex; /*Now you're a flex-container, you can decide how your flex-items are laid*/
+	flex-direction: column; /*Stack my flex-items vertically...change the default direction*/
+	justify-content: space-around; /*Interesting...since direction is changed, this works on the vertical direcion*/
+	align-items: center; /*direction is changed! This affects the horizontal direction*/
+	background-color: #f2f2f2; /*make me pretty*/
+}
+
+/*font size for the icons*/
+aside i.fa {
+	font-size: 0.9em;
+}
+
+.content {
+	flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.music-head {
+  flex: 0 0 280px; /*Same memo, don't grow or shrink - stay at 280px*/
+  display: flex;
+  padding: 40px;
+  background-color: #4e4e4e;
+}
+
+.music-list {
+	flex: 1 0 auto;
+	list-style-type: none;
+	padding: 5px 10px 0px;
+}
+
+li {
+  display: flex; /*Target each list containing the paragraphs*/
+  padding: 0 20px;
+  min-height: 50px;
+}
+
+li p {
+  flex: 0 0 25%; /*This is the sweet sauce*/
+}
+
+li span.catty-cloud {
+  border: 1px solid black;
+  font-size: 0.6em;
+  padding: 3px;
+}
+
+/* target every even numbered list item. 0, 2, 4...*/
+li:nth-child(2n) {
+  background-color: #f2f2f2;
+}
+
+.catty-music{
+	flex: 1 0 auto;
+	display: flex;
+	flex-direction: column;
+	font-weight: 300;
+	color: #fff;
+	padding-left: 50px;
+	letter-spacing: 0.1em;
+}
+
+.catty-music div:nth-child(1){
+	margin-bottom: auto;
+}
+
+.catty-music div:nth-child(2){
+	margin-top: 0;
+}
+
+.catty-music div:nth-child(2) i.fa{
+	font-size: 0.9em;
+	padding: 0 0.7em;
+	font-weight: 300;
+}
+
+.catty-music div:nth-child(1) p:first-child{
+  font-size: 1.8em;
+  margin: 0 0 10px;
+}
+
+/* Within the first div child of .catty-musi, this targets all paragraphs except the first */
+.catty-music div:nth-child(1) p:not(:first-child){
+  font-size: 0.9em;
+  margin: 2px 0;
+}
+
 footer {
-  flex: 0 0 90px; /* dont grow or shrink - just stay at height 90px. */
-  padding: 10px;
+	flex: 0 0 90px; /*don't grow or shrink - just stay at a height of 90px.*/
+	padding: 10px;
   color: #fff;
   background-color: rgba(61, 100, 158, .9);
-}
-aside {
-  flex: 0 0 40px; /* do not grow or shrink - stay fixed at 40px */
-  display: flex; /* now a flex container too */
-  flex-direction: column; /* stack icons vertically */
-  /* since direction is changed, this works on the vertical direction */
-  justify-content: space-around;
-  align-items: center; /* direction is changed! this affects the horizontal direction places icons in the center */
-  background-color: #f2f2f2; /* makes me pretty */
-}
-aside i.fa {
-  font-size: 0.9em; /* font size for icons */
 }
